--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,7 +36,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.json-simple-1.1.1.jar}:\
     ${file.reference.json-simple-1.1.1.jar-1}:\
-    ${libs.GSon.classpath}
+    ${libs.GSon.classpath}:\
+    ${libs.PostgreSQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
